--- a/crates/venus-server/Cargo.toml
+++ b/crates/venus-server/Cargo.toml
@@ -38,6 +38,11 @@ anyhow.workspace = true
 # Logging
 tracing.workspace = true
 
+# rust-analyzer download
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
+flate2 = "1.0"
+dirs = "5.0"
+
 # Embedded frontend (optional)
 rust-embed = { version = "8.5", optional = true }
 mime_guess = { version = "2.0", optional = true }
