chore: bump version to 0.1.0-beta.3 and standardize on Apache-2.0 license
Incremental release with LSP improvements and workspace isolation fixes.
Changed from dual MIT/Apache-2.0 to Apache-2.0 only for license clarity.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,24 +10,25 @@ members = [
     "crates/venus-worker",
 ]
 exclude = [
+    ".venus",
     "examples/.venus",
     "tests/.venus",
     "*/.venus",
 ]
 
 [workspace.package]
-version = "0.1.0-beta.1"
+version = "0.1.0-beta.3"
 edition = "2024"
-license = "MIT OR Apache-2.0"
+license = "Apache-2.0"
 repository = "https://github.com/ml-rust/venus"
 
 [workspace.dependencies]
 # Internal crates
-venus = { path = "crates/venus", version = "0.1.0-beta.1" }
-venus-macros = { path = "crates/venus-macros", version = "0.1.0-beta.1" }
-venus-core = { path = "crates/venus-core", version = "0.1.0-beta.1" }
-venus-sync = { path = "crates/venus-sync", version = "0.1.0-beta.1" }
-venus-server = { path = "crates/venus-server", version = "0.1.0-beta.1" }
+venus = { path = "crates/venus", version = "0.1.0-beta.3" }
+venus-macros = { path = "crates/venus-macros", version = "0.1.0-beta.3" }
+venus-core = { path = "crates/venus-core", version = "0.1.0-beta.3" }
+venus-sync = { path = "crates/venus-sync", version = "0.1.0-beta.3" }
+venus-server = { path = "crates/venus-server", version = "0.1.0-beta.3" }
 
 # Parsing and AST
 syn = { version = "2.0.112", features = ["full", "parsing", "visit", "extra-traits"] }
