--- a/crates/venus-macros/Cargo.toml
+++ b/crates/venus-macros/Cargo.toml
@@ -3,6 +3,7 @@ name = "venus-macros"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
 description = "Procedural macros for Venus reactive notebook environment"
 
 [lib]
