--- a/crates/venus-server/Cargo.toml
+++ b/crates/venus-server/Cargo.toml
@@ -3,6 +3,7 @@ name = "venus-server"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
 description = "WebSocket server for Venus interactive notebooks"
 
 [features]
@@ -38,6 +39,10 @@ anyhow.workspace = true
 # Logging
 tracing.workspace = true
 
+# Globals
+lazy_static = "1.5"
+libc.workspace = true
+
 # rust-analyzer download
 reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
 flate2 = "1.0"
@@ -46,6 +51,9 @@ dirs = "5.0"
 # Embedded frontend (optional)
 rust-embed = { version = "8.5", optional = true }
 mime_guess = { version = "2.0", optional = true }
+
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.59", features = ["Win32_System_JobObjects", "Win32_Foundation"] }
 
 [dev-dependencies]
 tempfile = "3.20"
