--- a/crates/venus-worker/Cargo.toml
+++ b/crates/venus-worker/Cargo.toml
@@ -3,6 +3,7 @@ name = "venus-worker"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
 description = "Worker process for Venus cell execution with process isolation"
 
 [[bin]]
@@ -11,8 +12,8 @@ path = "src/main.rs"
 
 [dependencies]
 # Core dependencies
-venus-core = { path = "../venus-core", version = "0.1.0-beta.1" }
-venus = { path = "../venus", version = "0.1.0-beta.1" }
+venus-core = { path = "../venus-core", version = "0.1.0-beta.3" }
+venus = { path = "../venus", version = "0.1.0-beta.3" }
 
 # Serialization for IPC
 bincode.workspace = true
