--- a/crates/venus-cli/Cargo.toml
+++ b/crates/venus-cli/Cargo.toml
@@ -3,6 +3,7 @@ name = "venus-cli"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
+repository.workspace = true
 description = "CLI for Venus reactive notebook environment"
 
 [[bin]]
@@ -19,7 +20,8 @@ tokio.workspace = true
 anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
-bincode.workspace = true
+rkyv.workspace = true
+dirs = "5.0"
 
 [dev-dependencies]
 assert_cmd = "2.0"
