--- a/crates/venus-cli/Cargo.toml
+++ b/crates/venus-cli/Cargo.toml
@@ -21,7 +21,7 @@ anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 rkyv.workspace = true
-dirs = "5.0"
+dirs.workspace = true
 
 [dev-dependencies]
 assert_cmd = "2.0"
