refactor(venus-core): migrate from bincode to rkyv for all serialization
Replace bincode with rkyv throughout the codebase for unified zero-copy
serialization. This provides consistent performance characteristics and
eliminates the dependency on bincode 2.x (which is now unmaintained).

Changes:
- IPC protocol: Switch to rkyv for WorkerCommand/WorkerResponse messages
- State management: Use rkyv for BoxedOutput container serialization
- Worker process: Update message handling to use rkyv encoding
- Convert PathBuf to String in IPC protocol for simpler serialization

All serialization now uses rkyv's unchecked deserialization for performance,
which is safe since we only deserialize data from trusted sources (our own
worker processes and cache files).

--- a/crates/venus-core/Cargo.toml
+++ b/crates/venus-core/Cargo.toml
@@ -13,7 +13,6 @@ proc-macro2.workspace = true
 petgraph.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-bincode.workspace = true
 rkyv.workspace = true
 salsa.workspace = true
 libloading.workspace = true
@@ -23,7 +22,7 @@ tracing.workspace = true
 which.workspace = true
 rayon.workspace = true
 libc.workspace = true
-uuid = { version = "1.11", features = ["v4"] }
+uuid.workspace = true
 fs2 = "0.4"
 
 [dev-dependencies]
