--- a/crates/venus-server/Cargo.toml
+++ b/crates/venus-server/Cargo.toml
@@ -39,8 +39,7 @@ anyhow.workspace = true
 # Logging
 tracing.workspace = true
 
-# Globals
-lazy_static = "1.5"
+# Globals (process cleanup)
 libc.workspace = true
 
 # rust-analyzer download
