--- a/crates/venus/Cargo.toml
+++ b/crates/venus/Cargo.toml
@@ -12,8 +12,14 @@ serde.workspace = true
 serde_json.workspace = true
 
 # Optional rich output integrations
-polars = { version = "0.46", optional = true, default-features = false, features = ["lazy", "fmt"] }
-image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
+polars = { version = "0.46", optional = true, default-features = false, features = [
+  "lazy",
+  "fmt",
+] }
+image = { version = "0.25", optional = true, default-features = false, features = [
+  "png",
+  "jpeg",
+] }
 
 [features]
 default = []
@@ -23,7 +29,3 @@ polars = ["dep:polars"]
 image = ["dep:image"]
 # All optional integrations
 full = ["polars", "image"]
-
-[[example]]
-name = "hello"
-path = "../../examples/hello.rs"
