feat(venus-core): add definition cell type for imports and type definitions
Introduce DefinitionCell as a new cell type to capture imports, type
definitions, and helper functions that exist outside executable cells.
Unlike code cells (which produce outputs) and markdown cells (which are
documentation), definition cells contain structural code that gets
compiled into the universe crate.

Changes:
- Add DefinitionCell and DefinitionType to graph types
- Implement definition cell parsing in CellParser
- Track definition cells in ParseResult alongside code/markdown
- Add rkyv dependency to venus crate for serialization
- Export venus prelude module for common imports

Definition cells enable proper separation of concerns: executable cells
focus on computation while definition cells handle type infrastructure.
This improves code organization and makes notebooks more maintainable.

--- a/crates/venus/Cargo.toml
+++ b/crates/venus/Cargo.toml
@@ -10,6 +10,7 @@ description = "Reactive notebook environment for Rust"
 venus-macros.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+rkyv.workspace = true
 
 # Optional rich output integrations
 polars = { version = "0.46", optional = true, default-features = false, features = [
