--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ exclude = [
 [workspace.package]
 version = "0.1.0-beta.3"
 edition = "2024"
+rust-version = "1.85.0"
 license = "Apache-2.0"
 repository = "https://github.com/ml-rust/venus"
 
@@ -31,41 +32,51 @@ venus-sync = { path = "crates/venus-sync", version = "0.1.0-beta.3" }
 venus-server = { path = "crates/venus-server", version = "0.1.0-beta.3" }
 
 # Parsing and AST
-syn = { version = "2.0.112", features = ["full", "parsing", "visit", "extra-traits"] }
-quote = "1.0.42"
-proc-macro2 = { version = "1.0.104", features = ["span-locations"] }
+syn = { version = "2.0", features = ["full", "parsing", "visit", "extra-traits"] }
+quote = "1.0"
+proc-macro2 = { version = "1.0", features = ["span-locations"] }
 
 # Graph
-petgraph = "0.8.3"
+petgraph = "0.8"
 
 # Serialization
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.148"
-rkyv = "0.8.12"  # default features include bytecheck for validation
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+rkyv = "0.8"  # default features include bytecheck for validation
 
 # Incremental computation
-salsa = "0.25.2"
+salsa = "0.25"
 
 # Dynamic loading
-libloading = "0.9.0"
+libloading = "0.9"
 
 # Async runtime
-tokio = { version = "1.48.0", features = ["full"] }
+tokio = { version = "1.48", features = [
+    "macros",        # #[tokio::main]
+    "rt-multi-thread", # Multi-threaded runtime
+    "sync",          # Mutex, RwLock, oneshot, mpsc, broadcast
+    "net",           # TcpListener
+    "time",          # sleep, timeout
+    "fs",            # File operations
+    "process",       # Command
+    "io-util",       # AsyncWriteExt, AsyncReadExt, AsyncBufReadExt
+    "signal",        # ctrl_c()
+] }
 
 # CLI
-clap = { version = "4.5.53", features = ["derive"] }
+clap = { version = "4.5", features = ["derive"] }
 
 # Error handling
-thiserror = "2.0.17"
-anyhow = "1.0.100"
+thiserror = "2.0"
+anyhow = "1.0"
 
 # Utilities
-uuid = { version = "1.19.0", features = ["v4"] }
-rustc-hash = "2.1.1"
-tracing = "0.1.44"
-tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
-libc = "0.2.178"
-which = "8.0.0"
+uuid = { version = "1.19", features = ["v4"] }
+rustc-hash = "2.1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+libc = "0.2"
+which = "8.0"
 dirs = "6.0"
 
 # Parallelism
