refactor: remove dead code and expand test coverage
Remove unused code: LoggingCallback, SharedContext types, ExecutionStats.
Replace TODO comments with implementation notes explaining design decisions.
Add comprehensive unit tests for LinearExecutor, ParallelExecutor, and other
core components. Fix widget output parsing to correctly handle widgets_len
field. Improve debug logging for FFI calls and deserialization errors. Add
data-analysis.rs example and roundtrip tests for venus-sync. Update examples
to use clearer variable names and remove obsolete simple_compute.rs.

--- a/crates/venus-server/Cargo.toml
+++ b/crates/venus-server/Cargo.toml
@@ -39,6 +39,9 @@ anyhow.workspace = true
 # Logging
 tracing.workspace = true
 
+# Hashing
+rustc-hash.workspace = true
+
 # Globals (process cleanup)
 libc.workspace = true
 
