--- a/crates/venus-sync/Cargo.toml
+++ b/crates/venus-sync/Cargo.toml
@@ -12,7 +12,7 @@ serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
-base64 = "0.22"
+base64.workspace = true
 
 [dev-dependencies]
 tempfile = "3.20"
